--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -426,8 +426,8 @@
 
     <!-- Links -->
     <div class="nav-links" id="huNavLinks">
-      <a class="nav-link" href="#partners">Partners</a>
-      <a class="nav-link" href="#mission">Mission</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#partners">Partners</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity.html#mission">Mission</a>
       <a
         class="nav-link"
         href="https://codecrunchglobal.vercel.app/hackathons.html"
