--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -816,6 +816,7 @@
   </footer>
 
 <script>
+  //navbar toggle
   (function () {
     const toggleBtn = document.querySelector(".nav-toggle");
     const navLinks = document.getElementById("huNavLinks");
@@ -851,6 +852,8 @@
     // Ensure initial state
     setExpanded(false);
   })();
+
+  //navbar toggle end 
 </script>
 
 
