--- a/2026-305hackjan2026.html
+++ b/2026-305hackjan2026.html
@@ -592,6 +592,10 @@
         <a class="btn" data-url="preEventWorkshops" data-toggle="preEventEnabled">
           <i class="fa-solid fa-chalkboard-user"></i>&nbsp; Pre-Event &amp; Hybrid Workshops (Zoom)
         </a>
+        
+        <a class="btn" data-url="mentorsschedule" data-toggle="preEventEnabled">
+          <i class="fa-solid fa-chalkboard-user"></i>&nbsp; Mentor Office Hours &amp; Support (Discord)
+        </a>
       </div>
     </div>
   </section>
@@ -1092,20 +1096,30 @@
     // ===== GLOBAL URL OBJECT (single source of truth) =====
     const URLS = {
       // Core links
-      agenda: 'https://HackUniversity-Agenda.vercel.app',
+
+      // agenda: 'https://HackUniversity-Agenda.vercel.app',
+  //  photoAlbum: 'https://hackuniversity-album.vercel.app',
+  //     prizes: 'https://hackuniversity-perks.vercel.app',
+        // perks: 'https://hackuniversity-perks.vercel.app/',
+
+      agenda: 'https://github.com/CODE-CRUNCH-CLUB/event-agenda/blob/main/2026-305-hackathon-SA-&-SB-JAN-2026.md',
+       perks: 'https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-305-hackathon-SA-&-SB-JAN-2026.md',
+             // Photo album + prizes
+      photoAlbum: 'https://photos.google.com/share/AF1QipN4JtGK4n186ewkcYr5nypsPumWt99ypTrTyL9l1J__W5hlmtHl5UVg137HRBbZ3g?key=eGdBYlZNdS04aTQ3WWtTVGRKQ0g2UTh3c3ZWNVJn',
+      prizes: 'https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-305-hackathon-SA-&-SB-JAN-2026.md',
+      mentorsschedule: 'https://docs.google.com/document/d/e/2PACX-1vSLfoVx9avh1RTlXgGZ5RYxzVh1CcoupZxFnqyOPPOpcM0WUrb4VwM7LVI8OsjsU3zDk6i08yZGTA8J/pub',
+      // Registration platforms
       devpost: 'https://305hackjan2026.devpost.com/',
       onestop: 'https://hackuniversity-registration.vercel.app/',
       bevy: 'https://gdg.community.dev/e/my5cad/',
-      perks: 'https://hackuniversity-perks.vercel.app/',
+     
       hackerGuide: 'https://hackuniversity-hackerguide.vercel.app',
       discordServer: 'https://hackuniversity-discord.vercel.app/',
       mlh: 'https://events.mlh.io/events/13482-305-hackathon-january-2026-hackdays-triathlon-registration-3-in-1-monthly-hackathon-business-venture-arena-305-excel-data-duel?_gl=1*16lmq5y*_ga*MTEyOTU1NTYzNS4xNzQ1NTMxMjM1*_ga_E5KT6TC4TK*czE3NjcyMzAzNDMkbzEzMiRnMSR0MTc2NzIzNjIzMyRqNTIkbDAkaDA.',
       instagramGroup: 'https://hackuniversityplatforms.vercel.app/',
       groupme: 'https://hackuniversityplatforms.vercel.app/',
 
-      // Photo album + prizes
-      photoAlbum: 'https://hackuniversity-album.vercel.app',
-      prizes: 'https://hackuniversity-perks.vercel.app',
+
 
       // Footer + social links
       hackuniversityInstagram: 'https://www.instagram.com/codecrunchclub/',
