--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -1329,14 +1329,21 @@
         prizesEnable: false, prizesUrl: "https://"
       },
 
+
+
+
+
       // Older / Past events
+
+
+
       {
         name: '🏙️ 305 Hackathon: Fall 2025 edition',
         startDate: '2025-09-19',
         endDate:   '2025-09-21',
         modality:  'in-person',
         hoursPreset: '3d',
-        url: 'https://305hackfall2025.vercel.app',
+        url: 'https://codecrunchglobal.vercel.app/HACK-5-305-HACK-FALL2025.html',
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
@@ -1350,7 +1357,8 @@
         endDate:   '2025-10-20',
         modality:  'virtual',
         hoursPreset: '1w',
-        url: 'https://empowherhack2025.vercel.app/',
+        url: 'https://codecrunchglobal.vercel.app/HACK-6.1-305HACKNOV-0.html',
+        //old direct https://empowherhack2025.vercel.app/
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
@@ -1364,7 +1372,8 @@
         endDate:   '2025-10-18',
         modality:  'in-person',
         hoursPreset: '1d',
-        url: 'https://empowherhackdayfall25.vercel.app/',
+         url: 'https://codecrunchglobal.vercel.app/HACK-6.1-305HACKNOV-0.html',
+        // url: 'https://empowherhackdayfall25.vercel.app/',
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
@@ -1378,7 +1387,8 @@
         endDate:   '2025-07-28',
         modality:  'virtual',
         hoursPreset: '1w',
-        url: 'https://summercodexhack2025.vercel.app/',
+        url: 'https://codecrunchglobal.vercel.app/HACK-4-SummerCodeX25.HTML',
+        // url: 'https://summercodexhack2025.vercel.app/',
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
@@ -1392,7 +1402,8 @@
         endDate:   '2025-05-26',
         modality:  'virtual',
         hoursPreset: '1w',
-        url: 'https://codestormhack2025.vercel.app/',
+        url: 'https://codecrunchglobal.vercel.app/HACK-CODESTORM.HTML',
+        // url: 'https://codestormhack2025.vercel.app/',
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
@@ -1406,7 +1417,8 @@
         endDate:   '2025-03-31',
         modality:  'hybrid',
         hoursPreset: '3d',
-        url: 'https://305hackspring2025.vercel.app/',
+        url: 'https://codecrunchglobal.vercel.app/HACK-2-305-HACK-SPRING2025.html',
+        // url: 'https://305hackspring2025.vercel.app/',
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
@@ -1420,7 +1432,8 @@
         endDate:   '2025-03-23',
         modality:  'virtual',
         hoursLabel: '36',
-        url: 'https://hackfiestamiami2025.vercel.app/',
+         url: 'https://codecrunchglobal.vercel.app/HACK-1-HACKFIESTA-SPRING2025.HTML',
+        // url: 'https://hackfiestamiami2025.vercel.app/',
         registrationViaOneStop: false,
         agendaEnable: false, agendaUrl: "https://",
         perksEnable: false, perksUrl: "https://",
