--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -409,7 +409,7 @@
       <article class="hu-card p-6 md:p-7">
         <h3 class="title-md">For Students</h3>
         <p class="subtitle mt-2">
-           Membership (OneStop Form), hackathons (OneStop Form), E-board Applications, programs, Hacker guides, and community access. — all in one place.
+           Membership (OneStop Form), hackathons (OneStop Form), E-board Applications (OneStop Form), programs, Hacker guides, and community access. — all in one place.
         </p>
 
         <div class="divider"></div>
