--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -1024,7 +1024,11 @@
 
       // Feb 2026
       {
-        name: '🤖 305 Hackathon Edition Feb 2026 - Session A (Online/Synchronous)',
+
+
+        name: '🔥 Hack Fiesta Miami 2026 Edition Feb 2026 - Session A (Online/Synchronous)',
+
+
         theme: 'Mechanical, Electrical & Hardware Innovation',
         startDate: '2026-01-30',
         endDate:   '2026-02-07',
@@ -1040,7 +1044,9 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🤖 305 Hackathon Edition Feb 2026 - Session B (In-person)',
+
+
+        name: '🔥 Hack Fiesta Miami 2026 Edition Feb 2026 - Session B (In-person)',
         theme: 'Mechanical, Electrical & Hardware Innovation',
         startDate: '2026-02-07',
         endDate:   '2026-02-07',
@@ -1058,7 +1064,8 @@
 
       // March 2026
       {
-        name: '🔥 Hack Fiesta Miami 2026 - Session A (Online/Synchronous)',
+
+        name: '🤖 305 Hackathon Edition Mar 2026 - Session A (Online/Synchronous)',
         theme: 'AI Startups & Venture Innovation',
         startDate: '2026-03-06',
         endDate:   '2026-03-14',
@@ -1074,7 +1081,7 @@
         prizesEnable: false, prizesUrl: "https://"
       },
       {
-        name: '🔥 Hack Fiesta Miami 2026 - Session B (In-person)',
+        name: '🤖 305 Hackathon Edition Mar 2026 - Session B (In-person)',
         theme: 'AI Startups & Venture Innovation',
         startDate: '2026-03-14',
         endDate:   '2026-03-14',
