--- a/hackuniversity-main-students.html
+++ b/hackuniversity-main-students.html
@@ -517,18 +517,30 @@
     <h3 class="portal-title">Student Portal</h3>
     <p class="portal-subtitle">OneStop gives you membership, hackathon registration, volunteering, and E-Board application — granting authenticated access to mailing lists and community platforms across Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch.</p>
 
-    <div class="divider"></div>
+<div class="divider"></div>
 
-    <!-- BIG PRIMARY CTA -->
-     <div class="portal-section-label">Get Started</div>
-    <a class="btn btn-primary portal-cta"
-       href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html"
-       target="_blank">
-      <i class="fa-solid fa-rocket-launch"></i>
-      Join Hack University 
-      <span class="text-xs opacity-80 font-semibold ml-2">13+ (OneStop Form)</span>
-    </a>
-    <div class="divider"></div>
+<div class="portal-section-label">Get Started</div>
+
+<div class="grid gap-3">
+  <a class="btn btn-primary portal-cta"
+     href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html"
+     target="_blank" rel="noopener noreferrer">
+    <i class="fa-solid fa-rocket-launch"></i>
+    Join Hack University
+    <span class="text-xs opacity-80 font-semibold ml-2">13+ (OneStop Form)</span>
+  </a>
+
+  <a class="btn btn-primary portal-cta"
+     href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html"
+     target="_blank" rel="noopener noreferrer">
+    <i class="fa-solid fa-rocket-launch"></i>
+    Student Login
+    <span class="text-xs opacity-80 font-semibold ml-2">13+ (OneStop Form)</span>
+  </a>
+</div>
+
+<div class="divider"></div>
+
 
     <!-- GET STARTED -->
     <!-- <div class="portal-section">
