--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -180,6 +180,14 @@
       </p>
 
        <div class="portal-grid"></div>
+
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-305jan2026.html">
+          <span>🏆 305 Hackathon: Jan 2026 — Session A & B</span>
+          <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
+          <small>Open certificate portal</small>
+        </a> 
+
+
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-codefest2025.html">
           <span>🏆 CodeFest Edition: Dec 2025 — Session A & B</span>
           <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
