--- a/hackathonvolunteer-certificates-305jan2026-2.html
+++ b/hackathonvolunteer-certificates-305jan2026-2.html
@@ -80,8 +80,8 @@
 
     /* ONE-ROW LOGOS (auto-shrink) */
     .logo-grid{
-      display:flex;           /* single row */
-      flex-wrap:nowrap;       /* never wrap */
+      display:flex;
+      flex-wrap:nowrap;
       justify-content:space-between;
       gap:12px;
       align-items:center;
@@ -97,7 +97,6 @@
       page-break-inside:avoid;break-inside:avoid;
     }
 
-    /* EXTRA SPACE before signature */
     .sig-gap{height:24px;}
 
     /* PRINT */
@@ -247,7 +246,6 @@
       "https://github.com/user-attachments/assets/5e2a6622-9702-438f-bb6b-25d8e894839e",
       "https://github.com/user-attachments/assets/c4f4805e-db3b-47a2-9a7f-0b124a66dd85",
       "https://github.com/user-attachments/assets/1eaf8425-7b4b-4035-a84b-b9b0ed28c52c"
-
     ];
     /* Signature image */
     const SIGNATURE_URL = "https://github.com/user-attachments/assets/02be41eb-2259-4d6d-9a07-1122f79d6f4b";
@@ -377,112 +375,127 @@
     }
 
     /* ===== Generate flow ===== */
-async function generateCertificate(){
-  const email = document.getElementById('certificateEmailInput').value.trim();
-  if(!email){
-    setStatus('error','❌ Please enter your email address.');
-    return;
-  }
-  if(!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)){
-    setStatus('error','❌ Please enter a valid email address.');
-    return;
-  }
+    async function generateCertificate(){
+      const email = document.getElementById('certificateEmailInput').value.trim();
+      if(!email){
+        setStatus('error','❌ Please enter your email address.');
+        return;
+      }
+      if(!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)){
+        setStatus('error','❌ Please enter a valid email address.');
+        return;
+      }
 
-  setStatus('info','⏳ Checking for available certificates...');
-  toggleButton(true);
+      setStatus('info','⏳ Checking for available certificates...');
+      toggleButton(true);
 
-  try {
-    const res = await fetch(
-      `${CERT_API_URL}?email=${encodeURIComponent(email)}&referer=${encodeURIComponent(location.href)}`
-    );
-    const payload = await res.json();
+      try {
+        const res = await fetch(
+          `${CERT_API_URL}?email=${encodeURIComponent(email)}&referer=${encodeURIComponent(location.href)}`
+        );
+        const payload = await res.json();
 
-    const certs = Array.isArray(payload?.certificates)
-      ? payload.certificates
-      : [];
+        /* ✅ FIX 1: handle access denied or other API errors */
+        if (payload?.error) {
+          setStatus('error', esc(payload.error));
+          return;
+        }
 
-    // no records at all
-    if (!certs.length) {
-      setStatus('error', 'No record found for this email.');
-      return;
+        const certs = Array.isArray(payload?.certificates)
+          ? payload.certificates
+          : [];
+
+        /* ✅ FIX 2: show API "Not Found" message if provided */
+        if (!certs.length) {
+          const msg = payload?.message || 'No record was found for the email address provided. If you believe this is an error, please message us on LinkedIn so our team can assist.';
+          setStatus('error', esc(msg));
+          return;
+        }
+
+        // split by status
+        const available = certs.filter(
+          c => c.status === 'Certificate Available' && c.certificateData
+        );
+        const blocked = certs.filter(
+          c => c.status === 'Certificate Not Available'
+        );
+
+        // ✅ PRIORITY 1 — any verified certificate wins
+        if (available.length > 0) {
+          const normalized = available.map(c =>
+            normalizeCert(c.certificateData)
+          );
+
+          const ticketIds = [
+            ...new Set(
+              available
+                .map(c => c.ticketId)
+                .filter(Boolean)
+            )
+          ];
+
+          setStatus(
+            'ok',
+            `
+            <strong>✅ Certificate Ready</strong><br><br>
+            <div>
+              <strong>Ticket ID${ticketIds.length > 1 ? 's' : ''}:</strong>
+              ${ticketIds.map(id => `<code>${esc(id)}</code>`).join(', ')}
+            </div>
+            <div style="margin-top:8px">
+              Your certificate will now open in a new tab for download or printing.
+            </div>
+            `
+          );
+
+          openCertificatesInNewTab(normalized, true);
+          return;
+        }
+
+        // ❌ PRIORITY 2 — ONLY if all are unverified
+        if (blocked.length === certs.length) {
+          const b = blocked[0];
+          const nextSteps = String(b.nextStepsMessage || '');
+
+          /* ✅ Optional FIX 3: avoid duplicate DB link if already in nextStepsMessage */
+          const showDbLink =
+            b.volunteerDatabaseUrl &&
+            !nextSteps.includes(b.volunteerDatabaseUrl);
+
+          setStatus(
+            'error',
+            `
+            <strong>${esc(b.message)}</strong><br><br>
+
+            <div><strong>Ticket ID:</strong> ${esc(b.ticketId || 'N/A')}</div>
+
+            ${showDbLink ? `
+              <div style="margin:8px 0">
+                <a href="${b.volunteerDatabaseUrl}" target="_blank" rel="noopener">
+                  View Volunteer Database
+                </a>
+              </div>
+            ` : ''}
+
+            <pre style="white-space:pre-wrap;font-family:inherit;margin-top:12px">
+${esc(nextSteps)}
+            </pre>
+            `
+          );
+          return;
+        }
+
+        // fallback (should not happen)
+        setStatus('error', 'Unable to determine certificate status.');
+
+      } catch (err) {
+        console.error(err);
+        setStatus('error','❌ Failed to check records. Please try again later.');
+      } finally {
+        toggleButton(false);
+      }
     }
 
-    // split by status
-    const available = certs.filter(
-      c => c.status === 'Certificate Available' && c.certificateData
-    );
-
-    const blocked = certs.filter(
-      c => c.status === 'Certificate Not Available'
-    );
-
-    // ✅ PRIORITY 1 — any verified certificate wins
-if (available.length > 0) {
-  const normalized = available.map(c =>
-    normalizeCert(c.certificateData)
-  );
-
-  // collect ticket IDs (unique, non-empty)
-  const ticketIds = [
-    ...new Set(
-      available
-        .map(c => c.ticketId)
-        .filter(Boolean)
-    )
-  ];
-
-  setStatus(
-    'ok',
-    `
-    <strong>✅ Certificate Ready</strong><br><br>
-
-    <div>
-      <strong>Ticket ID${ticketIds.length > 1 ? 's' : ''}:</strong>
-      ${ticketIds.map(id => `<code>${esc(id)}</code>`).join(', ')}
-    </div>
-
-    <div style="margin-top:8px">
-      Your certificate will now open in a new tab for download or printing.
-    </div>
-    `
-  );
-
-  openCertificatesInNewTab(normalized, true);
-  return;
-}
-
-
-    // ❌ PRIORITY 2 — ONLY if all are unverified
-    if (blocked.length === certs.length) {
-      const b = blocked[0];
-
-      setStatus(
-        'error',
-        `
-        <strong>${esc(b.message)}</strong><br><br>
-
-        <div><strong>Ticket ID:</strong> ${esc(b.ticketId || 'N/A')}</div>
-
-
-        <pre style="white-space:pre-wrap;font-family:inherit;margin-top:12px">
-${esc(b.nextStepsMessage)}
-        </pre>
-        `
-      );
-      return;
-    }
-
-    // fallback (should not happen)
-    setStatus('error', 'Unable to determine certificate status.');
-
-  } catch (err) {
-    console.error(err);
-    setStatus('error','❌ Failed to check records. Please try again later.');
-  } finally {
-    toggleButton(false);
-  }
-
-}
     /* ===== Clocks + init ===== */
     function updateTimes(){
       const now=new Date();
